--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 version=5.3.0
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx2048M
 org.gradle.caching=true
 org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
+org.gradle.configureondemand=true
+org.gradle.daemon=true
